# postgres-express-react-crud

./: .gitignore  README.md
client/: package-lock.json
client/src/: App.css  App.js
client/src/api/: apiClient.js
client/src/components/: Header.jsx
client/src/pages/: AddHotel.jsx  Hotels.jsx  LoginPage.jsx  RegisterPage.jsx
client/src/services/: authService.js  hotelService.js
rust-server/: Cargo.toml
rust-server/src/: main.rs
rust-server/src/config/: mod.rs
rust-server/src/db/: connection.rs  mod.rs  models.rs
rust-server/src/routes/: hotel.rs  mod.rs
server/: app.js  db.js  hotels.js  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: app.js  server.js
server/src/config/: db.js
server/src/controllers/: authController.js  hotelController.js
server/src/middlewares/: authMiddleware.js  requestLogger.js  validationMiddleware.js
server/src/routes/: authRoutes.js  hotelRoutes.js
server/src/services/: authService.js  hotelService.js
