[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
